[gd_scene load_steps=10 format=3 uid="uid://ktka8nwybead"]

[ext_resource type="PackedScene" uid="uid://djt2mhgxahh5k" path="res://models/props/facility_objects/cgc/moles/mole_hole.fbx" id="1_nu0kn"]
[ext_resource type="Script" uid="uid://bi24p7yxpr0ow" path="res://objects/interactables/mole_stomp/mole_hole.gd" id="2_38kih"]
[ext_resource type="PackedScene" uid="uid://dy45kccck15hb" path="res://models/props/facility_objects/cgc/moles/mole_cog.fbx" id="2_m5muj"]
[ext_resource type="PackedScene" uid="uid://ccswixs4tcud2" path="res://models/props/facility_objects/cgc/moles/mole_norm.fbx" id="3_0sgf7"]
[ext_resource type="PackedScene" uid="uid://dl32qcjfnv5nl" path="res://models/props/facility_objects/cgc/moles/mole_hit.fbx" id="4_ohgmt"]
[ext_resource type="AudioStream" uid="uid://neyk2d1b3k4i" path="res://audio/sfx/objects/moles/Mole_Stomp.ogg" id="6_y1qlh"]
[ext_resource type="PackedScene" uid="uid://bu0mb68t7unr8" path="res://objects/battle/effects/cog_gears/cog_gears.tscn" id="7_nnghi"]

[sub_resource type="BoxShape3D" id="BoxShape3D_xop78"]
size = Vector3(0.798584, 0.747314, 1)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_a80nm"]
resource_local_to_scene = true
emission_shape = 1
emission_sphere_radius = 0.05
direction = Vector3(0, 1, 0)
initial_velocity_min = 5.0
initial_velocity_max = 10.0

[node name="mole_hole" instance=ExtResource("1_nu0kn")]
script = ExtResource("2_38kih")

[node name="Moles" type="Node3D" parent="." index="1"]
transform = Transform3D(0.75, 0, 0, 0, 0.75, 0, 0, 0, 0.75, 0, -1, 0)

[node name="mole_cog" parent="Moles" index="0" instance=ExtResource("2_m5muj")]
unique_name_in_owner = true

[node name="mole_norm" parent="Moles" index="1" instance=ExtResource("3_0sgf7")]

[node name="mole_hit" parent="Moles" index="2" instance=ExtResource("4_ohgmt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.35, 0)
visible = false

[node name="PlayerDetection" type="Area3D" parent="." index="2"]
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerDetection" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.036499, 0.39856, 0)
shape = SubResource("BoxShape3D_xop78")

[node name="MoleSFX" type="AudioStreamPlayer3D" parent="." index="3"]
stream = ExtResource("6_y1qlh")

[node name="Timer" type="Timer" parent="." index="4"]
one_shot = true

[node name="CogGears" parent="." index="5" instance=ExtResource("7_nnghi")]
unique_name_in_owner = true
emitting = false
amount = 30
visibility_aabb = AABB(-6.29677, -1.869, -6.49009, 11.4551, 6.14176, 11.3803)
process_material = SubResource("ParticleProcessMaterial_a80nm")

[connection signal="body_entered" from="PlayerDetection" to="." method="body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="body_exited"]
[connection signal="timeout" from="Timer" to="." method="on_timeout"]
